# labsim

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py  run_experiment.py
src/: __main__.py  core.py  health.py  utils.py
src/labsim/: __init__.py  cli.py  models.py  report.py
src/labsim/labs/: __init__.py  biology.py  chemistry.py  physics.py
src/labsim/simulator/: __init__.py  engine.py  parameters.py  visualizer.py
tests/: test_benchmark.py  test_chemistry.py  test_core.py  test_integration.py  test_physics.py
